change domain name

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -3,7 +3,7 @@
 server {
     listen 80;
     listen [::]:80;
-	server_name booster.dokm.com;
+	server_name booster.dokm.xyz;
     
     
     # Docker DNS
