app conf change

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -3,7 +3,7 @@
 server {
     listen 80;
     listen [::]:80;
-	server_name booster.dokm.xyz;
+    server_name booster.dokm.xyz;
     
     
     # Docker DNS
@@ -12,21 +12,34 @@ server {
     location / {
         # hack to prevent nginx to resolve container's host on start up
         set $docker_host "hourboosterwebserver";
-        proxy_pass http://$docker_host:8080;
+        proxy_pass         http://$docker_host:80;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
     }
+    
 }
 
 server {
     listen 80 default_server;
-	listen [::]:80 default_server;
-    
+    listen [::]:80 default_server;
+    server_name dokm.xyz www.dokm.xyz;
     
     # Docker DNS
     resolver 127.0.0.11;
   
     location / {
         # hack to prevent nginx to resolve container's host on start up
-        set $docker_host "website_deno_1";
-        proxy_pass http://$docker_host:8080;
+        set $docker_host "website";
+        #proxy_pass http://$docker_host:8080;
+        #proxy_redirect http://$docker_host:8080;
+        proxy_pass         http://$docker_host:8080;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
     }
 }
